login lables align fixed

--- a/app/css/login.css
+++ b/app/css/login.css
@@ -114,6 +114,7 @@ input:-ms-input-placeholder{
 	font-family: fira_sanslight;
 	color: #849db5;
 	text-align:center;
+	display: block;
 }
 
 .login-input-form-container{
